instructions.Instructions.scala.error
Compilation error:
Instructions:6: error: not found: type int
avance(2:int)
         ^Instructions:8: error: not found: type int
avance(2:int) 
         ^