instructions.Instructions.scala.code
avance()
baisseBrosse()
gauche()
avance()
gauche()
avance(2:int)
gauche()
avance(2:int)